-Used better semantics for naming modules
-Cleaned up code nesting / separation
-Added Ethereum Classic Bitfinex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.6:
-Cleaned up underperforming markets
-Reorganized markets
-Added additional Cryptofresh markets
-Added LBRY (LBC) markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.7:
-Reorganized markets
-Added AEON Market
-Fixed per-coin BTC value to USD. Was only using coinbase to get USD value, now it uses whichever USD market you chose for BTC for all coin subtotals.
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.8:
-Added REP Markets
-Added Shadowcash Markets
-Removed LBRY Markets
-Removed AEON Markets
-Adjusted STEEM interest calculator to match real-world results closer
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.9:
-Added stats tab, and stat / chart links
-Added Blackcoin markets
-Removed ETC and EXP
-Reorganized markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.5.0:
-Added Zcash markets
-Added Zcoin markets
-Fixed bug in super large BTC trade values per market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.5.1:
-Added Golem static value subtoken market (fixed value, no active exchange trade values yet)
-Fixed bug in static value ETH subtoken markets
-Adjusted STEEM Power calculator for upcoming power down rate
-------------------------------------------------------------------

























